--- a/index.html
+++ b/index.html
@@ -2,237 +2,203 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8"/>
-  <!-- blokada lupy / mobilne DPI / bez „auto-zoom” na inputach -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"/>
-  <meta name="color-scheme" content="dark light"/>
-  <title>FreeFlow — zamów głosem</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Free Flow — zamów głosem</title>
+  <meta name="theme-color" content="#0b0f14"/>
+
   <style>
     :root{
-      --text:#e9eef6; --muted:#a9b3c3; --brand:#ff7a00; --brand-2:#00c8ff;
-      --glass: rgba(0,0,0,.24); --glass-b: rgba(255,255,255,.08);
       --bg:#0b0f14;
+      --glass: rgba(0,0,0,.36);
+      --glass-strong: rgba(0,0,0,.50);
+      --border: rgba(255,255,255,.10);
+      --txt:#eef3fa;
+      --muted:#a9b5c7;
+      --brand:#ff7a00;
+      --accent:#00d4ff;
+      --ok:#2bd67b;
+      --err:#ff5a5a;
+      --radius:18px;
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
     }
+
+    /* === Reset + baza === */
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0; color:var(--text);
-      font-family: Inter, ui-sans-serif, system-ui, Segoe UI, Roboto, Helvetica, Arial;
-      background: var(--bg) url("assets/Background.png") center/cover fixed no-repeat; /* <- dopasuj jeśli plik w innej lokalizacji */
-      -webkit-text-size-adjust:100%;
+      margin:0;
+      color:var(--txt);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      background: var(--bg) url("./assets/Background.png") center/cover fixed no-repeat;
     }
-    .wrap{max-width:1100px;margin:0 auto;padding:22px 16px}
-    header{display:flex;align-items:center;gap:14px;margin-bottom:6px}
-    .logo-mini{width:36px;height:36px;border-radius:8px;object-fit:cover;display:block}
-    h1{margin:6px 0 12px;font-size:clamp(30px,6vw,52px);line-height:1.05}
-    .lead{margin:0 0 10px;color:var(--muted);font-size:clamp(16px,2.7vw,20px)}
-    .chips{display:flex;flex-wrap:wrap;gap:12px;margin:10px 0 22px}
-    .chip{
-      display:inline-flex;align-items:center;gap:10px;
-      padding:12px 16px;border-radius:28px;cursor:pointer;
-      background:var(--glass);border:1px solid var(--glass-b);backdrop-filter: blur(6px);
+    .page{
+      min-height:100dvh;
+      display:flex;
+      flex-direction:column;
+      backdrop-filter: saturate(110%) blur(.2px);
+    }
+    .wrap{
+      width:min(1100px, 92vw);
+      margin-inline:auto;
+    }
+
+    /* === Header === */
+    header{
+      position:sticky; top:0; z-index:20;
+      backdrop-filter: blur(6px);
+      background: linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,.10) 70%, transparent);
+    }
+    .bar{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:16px 0 6px;
+    }
+    .brand{
+      display:flex; align-items:baseline; gap:8px;
+      font-weight:800; letter-spacing:.2px; font-size:28px;
+    }
+    .brand .dot{color:var(--brand)}
+    .brand small{
+      display:block; font-weight:500; color:var(--muted);
+      margin-top:2px; font-size:12px;
+    }
+    .actions{display:flex; gap:12px}
+    .iconbtn{
+      border:1px solid var(--border);
+      background:var(--glass);
+      padding:10px 12px; border-radius:14px;
+      display:flex; align-items:center; gap:10px;
+      color:var(--txt); box-shadow: var(--shadow);
+    }
+    .iconbtn b{background:#ff8a00;color:#111;border-radius:10px;padding:2px 6px}
+
+    /* === Hero === */
+    .hero{
+      display:grid; place-items:center;
+      padding:24px 0 8px;
+    }
+    .logo-big{
+      width:min(520px, 70vw);
+      height:auto; display:block;
+      filter: drop-shadow(0 10px 20px rgba(0,0,0,.6));
+      animation: float 6s ease-in-out infinite;
+    }
+    @keyframes float{
+      0%,100%{ transform: translateY(0) }
+      50%{ transform: translateY(-6px) }
+    }
+
+    /* === Tytuł/lead === */
+    h1{
+      font-size: clamp(28px, 5vw, 56px);
+      line-height:1.04; margin:0 0 6px;
+      text-shadow: 0 10px 30px rgba(0,0,0,.4);
+    }
+    .lead{color:var(--muted); margin:0 0 8px; font-size:clamp(14px, 2.6vw, 20px)}
+
+    /* === Panel alert / wynik === */
+    .panel{
+      margin: 8px auto 0;
+      width:min(100%, 980px);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      background: var(--glass-strong);
+      box-shadow: var(--shadow);
+      padding:16px 18px;
+      display:flex; align-items:center; gap:12px;
+    }
+    .panel.hidden{display:none}
+    .panel.err{border-color: rgba(255,90,90,.25)}
+    .panel .pill{
+      width:28px; height:28px; border-radius:50%;
+      display:grid; place-items:center; flex:0 0 auto;
+      background:rgba(0,0,0,.35); border:1px solid var(--border)
+    }
+    .panel.err .pill{ background:rgba(255,90,90,.15); border-color: rgba(255,90,90,.35) }
+
+    /* === Przyciski kategorii === */
+    .cats{
+      display:flex; gap:12px; flex-wrap:wrap;
+      margin: 18px 0 28px;
+    }
+    .cat{
+      flex:1 1 160px; max-width:220px;
+      border:1px solid var(--border);
+      background: var(--glass);
+      color:var(--txt);
+      border-radius: 20px;
+      padding:14px 18px;
+      display:flex; align-items:center; gap:10px;
+      justify-content:center;
+      cursor:pointer;
+      box-shadow: var(--shadow);
       transition: transform .12s ease, background .2s ease, border-color .2s ease;
+      backdrop-filter: blur(4px);
+      user-select:none;
     }
-    .chip:active{transform:scale(.98)}
-    .chip .emoji{font-size:18px}
-    .chip .label{font-size:16px}
-    .hero{display:grid;place-items:center;margin:6px auto 18px}
-    .stage{
-      width:min(84vw,580px);aspect-ratio:1/1;display:grid;place-items:center;
-      background: radial-gradient(120px 120px at 50% 50%, rgba(255,122,0,.12), transparent 60%);
-      border-radius:50%;
+    .cat:hover{ transform: translateY(-2px); border-color: rgba(255,255,255,.18) }
+    .cat.active{ outline:2px solid rgba(0,212,255,.35); background: rgba(0,0,0,.55) }
+
+    /* === Sekcja tytułowa (nad hero) === */
+    .intro{margin-top:6px}
+    .intro .wrap{padding-top:6px}
+    .hero .wrap{padding:0}
+
+    /* === Dół strony — bez notek, czysto === */
+    footer{height:22px}
+
+    @media (min-width:900px){
+      .clusters{display:grid; grid-template-columns: 1.2fr .8fr; gap:24px; align-items:center}
+      .hero{padding-top:10px}
     }
-    .ff-logo{
-      width:78%;max-width:520px;display:block;
-      filter: drop-shadow(0 0 10px #ff5a00) drop-shadow(0 0 26px rgba(255,153,0,.45));
-      transition: transform .2s ease;
-    }
-    .listening{animation:pulse 1200ms ease-in-out infinite}
-    @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.03)}100%{transform:scale(1)}}
-    .bubble{
-      margin:0 auto 12px;max-width:1100px;padding:16px 14px;min-height:48px;
-      background:var(--glass);border:1px solid var(--glass-b);border-radius:14px;font-size:18px
-    }
-    .results{display:none}
-    .row{display:flex;gap:12px;flex-wrap:wrap}
-    .hidden{display:none!important}
-    .notice{color:#ffb8a6}
-    .toast{
-      position:fixed;left:16px;right:16px;bottom:18px;z-index:50;
-      padding:12px 14px;border-radius:14px;background:rgba(0,0,0,.65);border:1px solid rgba(255,255,255,.08);
-      display:none;font-size:15px
-    }
-    button{color:inherit}
   </style>
 </head>
 <body>
-  <main class="wrap">
+  <div class="page">
+    <!-- HEADER -->
     <header>
-      <!-- mini logo (opcjonalne) -->
-      <img class="logo-mini" src="assets/Freeflowlogo.png" alt="FreeFlow"/> <!-- <- dopasuj nazwę jeśli inna -->
-      <div>
-        <div style="font-weight:700;font-size:18px;letter-spacing:.3px">Free <span style="color:var(--brand)">Flow</span></div>
-        <div style="font-size:12px;color:var(--muted)">Voice to order — tryb testowy, bez profilowania</div>
+      <div class="wrap bar">
+        <div>
+          <div class="brand">
+            <span class="dot">Free</span><span>Flow</span>
+          </div>
+          <small class="brand-sub">Voice to order — tryb testowy, bez profilowania</small>
+        </div>
+        <div class="actions">
+          <div class="iconbtn" aria-label="Menu">
+            <span>☰</span>
+          </div>
+          <div class="iconbtn" aria-label="Koszyk">
+            <span>🛒</span><b id="cartBadge">11</b>
+          </div>
+        </div>
       </div>
     </header>
 
-    <h1>FreeFlow — zamów głosem</h1>
-    <p class="lead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</p>
+    <main class="wrap">
+      <section class="intro">
+        <h1>Złóż zamówienie</h1>
+        <p class="lead">Jedzenie, Taxi albo nocleg — powiedz lub kliknij.</p>
+        <div class="cats" id="cats">
+          <button class="cat active" data-type="food">🍽️ Jedzenie</button>
+          <button class="cat" data-type="taxi">🚕 Taxi</button>
+          <button class="cat" data-type="hotel">🏡 Hotel</button>
+        </div>
+      </section>
 
-    <div class="chips" id="chips">
-      <button class="chip" data-type="food"><span class="emoji">🍽️</span><span class="label">Restauracja</span></button>
-      <button class="chip" data-type="taxi"><span class="emoji">🚕</span><span class="label">Taxi</span></button>
-      <button class="chip" data-type="hotel"><span class="emoji">🏨</span><span class="label">Hotel</span></button>
-    </div>
+      <section class="hero" aria-label="Logo FreeFlow">
+        <img class="logo-big" src="./assets/Freeflowlogo.png" alt="FreeFlow logo">
+      </section>
 
-    <section class="hero">
-      <div class="stage">
-        <!-- LOGO SVG z delikatnym „glow” i klasą .listening podczas nasłuchu -->
-        <img id="ffLogo" class="ff-logo" src="assets/freeflow-logo.svg" alt="FreeFlow logo"/> <!-- <- upewnij się, że plik istnieje -->
+      <!-- panel błędu / wyniku -->
+      <div id="panel" class="panel hidden">
+        <div class="pill" id="panelIcon">ℹ️</div>
+        <div id="panelText">Komunikat…</div>
       </div>
-    </section>
+    </main>
 
-    <div id="transcript" class="bubble">Powiedz, co chcesz zamówić…</div>
-    <div id="results" class="bubble results"></div>
-  </main>
+    <footer></footer>
+  </div>
 
-  <div id="toast" class="toast"></div>
-
-  <script>
-    /* === KONFIG === */
-    const API_BASE = 'https://<twoja-nazwa>.vercel.app'; // <- PODMIEŃ na właściwy URL backendu (Vercel)
-    const USE_MOCK_IF_FAILS = true; // fallback na czas testów
-
-    /* === UTIL: toast === */
-    const toastEl = document.getElementById('toast');
-    function toast(msg, ms=2600){
-      toastEl.textContent = msg; toastEl.style.display='block';
-      clearTimeout(window.__t); window.__t=setTimeout(()=>toastEl.style.display='none', ms);
-    }
-
-    /* === UI refs === */
-    const logo = document.getElementById('ffLogo');
-    const transcript = document.getElementById('transcript');
-    const results = document.getElementById('results');
-
-    /* === LOGO animacja === */
-    function setListening(on){
-      logo.classList.toggle('listening', !!on);
-    }
-
-    /* === Web Speech API (Chrome/Edge) === */
-    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-    const sr = SpeechRecognition ? new SpeechRecognition() : null;
-    if(sr){
-      sr.lang = 'pl-PL';
-      sr.interimResults = true;
-      sr.maxAlternatives = 1;
-
-      sr.onstart = () => setListening(true);
-      sr.onend   = () => setListening(false);
-      sr.onerror = (e) => { setListening(false); toast('Rozpoznawanie niedostępne: '+e.error); };
-
-      sr.onresult = (ev)=>{
-        let finalText = '', interim = '';
-        for (let i=ev.resultIndex; i<ev.results.length; i++){
-          const t = ev.results[i][0].transcript;
-          if(ev.results[i].isFinal) finalText += t + ' ';
-          else interim += t;
-        }
-        transcript.textContent = (finalText || interim || '…').trim();
-        if(finalText.trim()){
-          handleTranscript(finalText.trim());
-        }
-      };
-
-      // start nasłuchu na klik logo
-      logo.addEventListener('click', ()=>{
-        try{ sr.start(); }catch{ /* already running */ }
-      });
-    } else {
-      // brak API — kliknięcie logo to „próbka”
-      logo.addEventListener('click', ()=>{
-        transcript.textContent = 'Zarezerwuj stolik dla trzech osób';
-        handleTranscript('Zarezerwuj stolik dla trzech osób');
-      });
-      toast('Włącz Chrome/Edge, by użyć mowy (Web Speech API).');
-    }
-
-    /* === Chips (skrótowe zamówienia) === */
-    document.getElementById('chips').addEventListener('click', (e)=>{
-      const chip = e.target.closest('.chip');
-      if(!chip) return;
-      const type = chip.dataset.type;
-      let sample = 'Zarezerwuj stolik dla trzech osób';
-      if(type==='taxi') sample='Zamów taksówkę na 20:00 do Katowic';
-      if(type==='hotel') sample='Zarezerwuj dwa pokoje na dziś w centrum Krakowa';
-      transcript.textContent = sample;
-      handleTranscript(sample);
-    });
-
-    /* === Call backend === */
-    async function callOrder(payload){
-      const r = await fetch(`${API_BASE}/api/order`, {
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body: JSON.stringify(payload),
-        mode: 'cors',
-      });
-      if(!r.ok) throw new Error('API '+r.status);
-      return r.json();
-    }
-
-    // MOCK na czas testów — włącza się tylko, gdy API zwróci błąd i flaga USE_MOCK_IF_FAILS=true
-    async function safeOrder(payload){
-      try{
-        const data = await callOrder(payload);
-        return data;
-      }catch(err){
-        if(!USE_MOCK_IF_FAILS) throw err;
-        // Prosty mock:
-        await new Promise(res=>setTimeout(res, 500));
-        return {
-          ok:true,
-          echo: payload,
-          result: {
-            type: inferTypeFromText(payload.text),
-            eta: "15–20 min",
-            price: "PLN 38",
-            vendor: "Demo Partner",
-            note: "Wersja testowa (mock).",
-          }
-        };
-      }
-    }
-
-    function inferTypeFromText(text){
-      const t = text.toLowerCase();
-      if(t.includes('taxi') || t.includes('taks')) return 'taxi';
-      if(t.includes('hotel') || t.includes('pokój')) return 'hotel';
-      return 'food';
-    }
-
-    async function handleTranscript(text){
-      results.classList.remove('hidden'); results.style.display='block';
-      results.textContent = 'Przetwarzam zamówienie…';
-      const payload = { text, locale:'pl-PL' };
-
-      try{
-        const data = await safeOrder(payload);
-        if(!data || data.ok===false) throw new Error('Brak wyniku');
-        const r = data.result || data;
-        const lines = [];
-        lines.push('✅ Gotowe: ' + (r.type || inferTypeFromText(text)));
-        if(r.vendor) lines.push('Miejsce: ' + r.vendor);
-        if(r.eta)    lines.push('Czas: ' + r.eta);
-        if(r.price)  lines.push('Cena: ' + r.price);
-        if(r.note)   lines.push('Info: ' + r.note);
-        results.innerHTML = lines.map(l=>`• ${l}`).join('<br>');
-      }catch(e){
-        results.innerHTML = `<span class="notice">❌ Order błąd: ${e.message || e}</span>`;
-      }
-    }
-  </script>
+  <script src="./app.js"></script>
 </body>
 </html>
